--- a/my-app/package.json
+++ b/my-app/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-helmet-async": "^2.0.5",
     "react-router": "^7.5.2",
     "tailwindcss": "^4.1.4",
     "vite-plugin-tsconfig-paths": "^1.4.1"
