--- a/my-app/package.json
+++ b/my-app/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.4",
     "@tmraaex/simpleframework": "^1.1.8",
     "axios": "^1.9.0",
+    "js-cookie": "^3.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-helmet-async": "^2.0.5",
