--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^3.7.0",
+    "@stripe/stripe-js": "^7.3.0",
     "@tailwindcss/vite": "^4.1.4",
     "@tmraaex/simpleframework": "^1.1.8",
     "axios": "^1.9.0",
